old/base/prod-api/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: prod-api
spec:
  type: ClusterIP
  selector: { app: api }
  ports:
    - name: http
      port: 80
      targetPort: 8080
